--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "velocityx",
 	"displayName": "VelocityX",
 	"description": "Flutter VelocityX snippect",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"engines": {
 		"vscode": "^1.53.0"
 	},
@@ -108,14 +108,10 @@
 			}
 		]
 	},
-	"scripts": {
-		"vscode:prepublish": "webpack --mode production",
-		"webpack": "webpack --mode development",
-		"webpack-dev": "webpack --mode development --watch",
-		"test-compile": "tsc -p ./",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./"
-	},
+    "scripts": {
+        "postinstall": "node ./node_modules/vscode/bin/install",
+        "test": "node ./node_modules/vscode/bin/test"
+    },
 	"devDependencies": {
 		"@types/change-case": "^2.3.1",
 		"@types/glob": "^7.1.3",
