--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "velocityx",
 	"displayName": "VelocityX",
-	"description": "Flutter VelocityX snippect",
+	"description": "Flutter VelocityX snippet",
 	"version": "1.0.1",
 	"engines": {
 		"vscode": "^1.53.0"
