--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,11 +1,11 @@
 .vscode/**
 .vscode-test/**
-out/**
+out/test/**
 src/**
 .gitignore
-.yarnrc
 vsc-extension-quickstart.md
+webpack.config.js
 **/tsconfig.json
-**/.eslintrc.json
+**/tslint.json
 **/*.map
 **/*.ts
